# celery_example

./: README.md  asgi.py  celerybeat-schedule  pyproject.toml  wsgi.py
celery_example/: celery.py
celery_example/structure/: admin.py  models.py  tasks.py  urls.py  views.py
settings/: base.py
templates/: base.html
urls/: urls.py
