[tool.poetry]
name = "celery_example"
version = "0.1.0"
description = ""
authors = ["a.janas <a.janas@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.3"
celery = "^5.0.2"
redis = "^3.5.3"
django-celery-results = "^2.0.0"
celery-progress = "^0.0.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
